syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message inputPasswordRequest {
    string Email = 1;
    string Password = 2;
}

message inputPasswordResponse {
    string Message = 1;
    google.protobuf.Timestamp PasswordChangedAt = 3;
}

message resetPasswordRequest {
    string Email = 1;
    string Password = 2;
}

message resetPasswordResponse {
    string Message = 1;
    google.protobuf.Timestamp PasswordChangedAt = 3;
}
